# VAULT

./: .gitignore  CHEATSHEET.txt  CMakeLists.txt  LICENSE  README.md  config.json  package-lock.json  package.json  tui.js
Protocol/CP/: CMakeLists.txt  README.md  factory.cpproj  receiver.py  sender.py
Protocol/CP/.obsidian/: workspace.json
Protocol/CP/receiver/: CMakeLists.txt  cp_receiver_node.cpp  cp_receiver_node.hpp  main.cpp
Protocol/CP/sender/: .cp_login_key  CMakeLists.txt  cp_sender_node.cpp  cp_sender_node.hpp  cp_server.cpp  cp_server.hpp  main.cpp
Protocol/CP/shared/: CMakeLists.txt  cp_config.cpp  cp_config.hpp  cp_crypto.cpp  cp_crypto.hpp  cp_packet.cpp  cp_packet.hpp  cp_session.cpp  cp_session.hpp  cp_types.hpp
include/vault/: author_registry.hpp  delta.hpp  name_registry.hpp  object_store.hpp  relay.hpp  sic.hpp  version_chain.hpp
src/: author_registry.cpp  delta.cpp  name_registry.cpp  object_store.cpp  sic.cpp  version_chain.cpp
src/receiver/: main.cpp  receiver.cpp  receiver.hpp
src/relay/: main.cpp  relay.cpp
src/sender/: main.cpp
src/sender/commands/: diff.cpp  get.cpp  hook.cpp  rollback.cpp  sic_cmd.cpp  sync.cpp  verify.cpp
tests/: CMakeLists.txt  test_delta.cpp  test_object_store.cpp  test_sic.cpp  test_version_chain.cpp
